@@ -1,5 +1,10 @@
 2000-05-30  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-item.c: Make sure that the cursor is always shown when
+	the selection changes.
+
+2000-05-30  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-group-container.c, e-table-group-container.h,
 	e-table-group-leaf.c, e-table-group-leaf.h, e-table-group.c,
 	e-table-group.h, e-table-item.c, e-table-item.h, e-table.c,
